Fixed horizontal scroll

--- a/css/custom.css
+++ b/css/custom.css
@@ -39,31 +39,34 @@ html, body, h1, h2, p {
 .images {
 	z-index: 1;
 	position: absolute;
+	max-width: 100%;
 }
 
 #latte {
-	width: 35%;
-	margin: 30vh -1vh 0.5vh 0;
+	width: 32%;
+	margin: 30vh -1.2vh 0.5vh 0;
 }
 
 #desk {
-	width: 50%;
-	margin: 0.5vh -1vh 0 0;
+	width: 44%;
+	margin: 0.5vh -1.2vh 0 0;
 }
 
 #ukulele {
-	width: 20%;
+	width: 18%;
 	max-width: 140px;
-	margin: 10vh 0 0 -1vh;
+	margin: 10vh 0 0 -1.2vh;
 }
 
 #guitar {
-	width: 9.17%;
+	width: 8.25%;
+	max-width: 64px;
+	margin: 10vh 0 0 1vh;
 }
 
 #food {
 	width: 30%;
-	margin: 0 0 0 -1vh;
+	margin: 0 0 0 -1.2vh;
 }
 
 /*=============================*/
